tests/baselines/reference/project/declarationDir/amd/declarationDir.errors.txt
lib.es5.d.ts(48,21): error TS6054: File 'lib.es2009.uint16array' has an unsupported extension. The only supported extensions are '.ts', '.tsx', '.d.ts', '.cts', '.d.cts', '.mts', '.d.mts'.


==== b.ts (0 errors) ====
    export class B {
        
    }
==== a.ts (0 errors) ====
    import {B} from './subfolder/b';
    export class A {
        b: B;
    }
==== subfolder/c.ts (0 errors) ====
    import {A} from '../a';
    
    export class C {
        a: A;
    }